--- a/seguranca_senha/css/style.css
+++ b/seguranca_senha/css/style.css
@@ -80,3 +80,8 @@ body{
     display: flex; 
     justify-content: center;
 }
+
+.parametro-conteudo-senha {
+    display: flex;
+    justify-content: center;
+}
