--- a/testes_php/css/style.css
+++ b/testes_php/css/style.css
@@ -10,6 +10,9 @@
     --texto-fundo: rgba(58, 55, 94, 0.3);
     --botaoAdd-cursos: #5ee247;
     --verdeEscuro: #399839;
+    --fundo-botaoStrap: #495696;
+    --borda-straps: #f2f2f2;
+    --botao-strapA: #495796;
 }
 
 body {
@@ -248,6 +251,28 @@ body {
     color: var(--verde);
     font-size: 20px;
     margin: 0;
+}
+
+.aba-edits {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.btn-editForm {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 30px;
+}
+
+.botao-edit, .botaoExcluir {
+    display: flex;
+    justify-content: space-between;
+    align-self: center;
+    padding: 5px;
+    border: 0.3px solid var(--botao-inativo);
 }
 
 @media screen and (min-width:768px){
